Updated issues with dark mode. Still some moderate issues with the file viewer and minor issues with light mode on the submission page. Both are imporvments.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,6 +43,7 @@
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
   --color-card: var(--card);
+  --color-node-color: var(--node-color);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
@@ -68,7 +69,7 @@
   --accent-foreground: oklch(0.21 0.006 285.885);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.92 0.004 286.32);
-  --input: oklch(75.402% 0.00009 271.152);
+  --input: #ffffff;
   --ring: #2096f7;
   --chart-1: oklch(0.646 0.222 41.116);
   --chart-2: oklch(0.6 0.118 184.704);
@@ -87,6 +88,7 @@
   --table-header-foreground: #000000;
   --table-highlight: #ececec;
   --table-background: #ffffff;
+  --node-color: #fff59d;
 }
 
 /* Cytoscape + ELK JFLAP viewer — tooltip styles (tippy.js) */
@@ -190,6 +192,7 @@
   --table-header-foreground: #000000;
   --table-highlight: #0f0f0f;
   --table-background: #1f1f1f;
+  --node-color: #caa22b;
 }
 
 @layer base {
